--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@
 /*------------------- 1.2. Function -------------------*/
 /*------------------- 1.3. Variable-------------------*/
 :root {
-  --theme-color: #E8092E;
+  --theme-color: #E8092F;
   --title-color: #171717;
   --body-color: #171717;
   --smoke-color: #F4F4F4;
